# glsltest

./: CMakeLists.txt  README.md  main.cpp  sample.frag  sample.vert
Shaders/: sample.frag  sample.vert
Sources/: CMakeLists.txt  main.cpp
debug/: debug.cpp  output with extensions.txt  output without extensions (expected).txt
